# Control-system-portfolio

./: README.md
ADRC_tuning_Quanser/: ADRC_Quanser.slx  ADRC_Quanser.slx.autosave  ADRC_Quanser.slxc  ADRC_Quanser_final.slx  ADRC_Quanser_final.slxc  Animacja3d.m  Forward_Dynamics.m  Gamma.m  Initial_cond.mat  Inverse_Dynamics.m  Orthogonal_Complement.m  Phiq.m  README.md  Settings.m  Strojenie.m  Trajectory.m  Trajectory_Circle.m  Trajectory_Trapz.m  Wykresy3D.m  Wyniki_ADRC.m  output.mat  valid_settings.mat  valid_settings_dt_0005.mat  wzory.m
Control_loop_Quanser_ADRC/: ADRC_Quanser.slx  ADRC_Quanser.slxc  ADRC_Quanser_X2Y2.slxc  Animacja.m  Animacja3d.m  Forward_Dynamics.m  Forward_Dynamics_ODE.m  Inverse_Dynamics.m  Orthogonal_Complement.m  Phi.m  Phiq.m  README.md  Schemat_ADRC_manipulator.slx  Schemat_ADRC_manipulator.slx.autosave  Simulink_wyniki.m  Strojenie.m  Trajectory_Circle.m  Trajectory_Trapz.m  Wykresy3D.m  traj.mat  u.mat  untitled.m  validSettings.mat  validSettingsX2Y2_initial_cond.mat  validSettingsX2Y2_initial_cond_traj_circ.mat  wzory.m
Control_loop_underactuated_2DOF/: Cart_Pole.m  Cart_Pole_PID.m  Dwa_wozki.m  Forward_Dynamics.m  Inverse_Dynamics.m  Inverse_Dynamics_Masa_na_wozku.m  Inverse_Dynamics_v2.m  Manipulator.m  Manipulator_PID.m  Masa_na_sprezynie_na_wozku.m  Masa_na_sprezynie_na_wozku_PID.m  Points_On_Plane.m  Quanser_Trajectory.m  README.md  Simulation.m  Trajectory_v2.m
ROS2/: README.md
ROS2/install/: setup.bash  (+4 more)
ROS2/install/projekt4/share/projekt4/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
(+84 files in other folders)
