<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>projekt4</name>
  <version>0.0.0</version>
  <description>Ostatni projekt</description>
  <maintainer email="janek.piliszczuk@gmail.com">Jan Piliszczuk</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tutorial_interfaces</depend>
  <build_depend>projekt3</build_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  

  <exec_depend>projekt3</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>


